--- a/package.json
+++ b/package.json
@@ -15,11 +15,7 @@
     },
     "license": "MIT",
     "devDependencies": {
-        "@napi-rs/cli": "^2.18.4",
-        "ava": "^6.0.1"
-    },
-    "ava": {
-        "timeout": "3m"
+        "@napi-rs/cli": "^2.18.4"
     },
     "engines": {
         "node": ">= 10"
@@ -30,8 +26,7 @@
         "build:debug": "napi build --platform --strip ../dist/dont-starve-asset-processor",
         "prepublishOnly": "napi prepublish -t npm",
         "universal": "napi universal",
-        "version": "napi version",
-        "test": "ava"
+        "version": "napi version"
     },
     "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
