--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "scripts": {
         "artifacts": "napi artifacts",
         "build": "napi build --platform --release",
-        "build:debug": "napi build --platform --strip ../dist/dont-starve-asset-processor",
+        "build:debug": "napi build --platform",
+        "build:dist": "napi build --platform --strip  ../dist/dont-starve-asset-processor",
         "prepublishOnly": "napi prepublish -t npm",
         "universal": "napi universal",
         "version": "napi version"
